kubernetes/apps/minecraft/gtnh/admin/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: gtnh-admin
spec:
  selector:
    app.kubernetes.io/name: gtnh-admin
  ports:
    - name: ssh
      port: 22
      targetPort: ssh
      protocol: TCP
